# sm-ext-rpc

./: .clang_complete  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
scripting/: cross_chat.sp  rpc_test.sp
scripting/include/: rpc.inc
src/: CachedSocket.cpp  CachedSocket.hpp  CommandProcessor.cpp  CommandProcessor.hpp  CoreConfig.cpp  CoreConfig.hpp  Crypto.cpp  Crypto.hpp  EventLoop.cpp  EventLoop.hpp  Exstension.cpp  Exstension.hpp  RPCCall.cpp  RPCCall.hpp  RPCContext.cpp  RPCContext.hpp  RPCMethod.cpp  RPCMethod.hpp  Server.cpp  Server.hpp  SocketHandler.cpp  SocketHandler.hpp  rpc_handletypes.hpp  smn_extension.cpp  smn_json.cpp  smn_rpccall.cpp  smn_rpccontext.cpp
src/sdk/: smsdk_config.h
